# Project_DjangoRest

./: .gitignore  README.md  pyproject.toml  requirements.txt
authentication/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_remove_user_birth_user_age.py  0003_alter_user_age.py
project/: settings.py  urls.py
project_study/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
project_study/migrations/: 0001_initial.py
